--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,12 @@
 @import "reset";
 @import "globals";
 
-body {
+html, body {
+	width: 100%;
+	height: 100%;
+}
 
+#three-canvas {
+	width: 100%;
+	height: 100%;
 }
